--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,6 +6,7 @@ on:
   push:
     branches:
       - master
+  workflow_dispatch:
 
 jobs:
   publish:
@@ -84,5 +85,6 @@ jobs:
             .
 
       - shell: bash
+        if: false
         run: |
           docker push ${{ steps.info.outputs.name }}:${{ steps.info.outputs.version }}
